<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_outline_video_library_24px"
        android:title="@string/text_title_movie"/>
    <item
        android:id="@+id/navigation_tv_show"
        android:icon="@drawable/ic_baseline_album_24px"
        android:title="@string/text_title_tv_show" />

</menu>
