...
                android:id="@+id/imageSplash"
                android:contentDescription="@string/app_name"/>
        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textTitle"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"/>
...
